--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ Markdown==3.3.3
 matplotlib==3.1.1
 numpy==1.19.5
 oauthlib==3.1.0
-opencv-python==4.5.1.48
+opencv-python-headless
 opt-einsum==3.3.0
 protobuf==3.14.0
 pyasn1==0.4.8
@@ -31,12 +31,12 @@ requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7
 scikit-learn==0.24.1
-scipy==1.6.0
+scipy
 six==1.15.0
-tensorboard==2.4.1
-tensorboard-plugin-wit==1.8.0
+tensorboard
+tensorboard-plugin-wit
 tensorflow
-tensorflow-estimator==2.4.0
+tensorflow-estimator
 termcolor==1.1.0
 threadpoolctl==2.1.0
 tqdm==4.56.0
